flash of white rather than yellow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
     box-sizing: border-box;
     margin: 0 auto;
 
-    background-color: yellow;
+    background-color: white;
     height: 528px;
     width: 297px;
     .screen {
